--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Daniel Portillo</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/Logos/Avatar.ico">
+  <link rel="icon" href="images/Logos/avataaars 1.svg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Satisfy&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/22e099610c.js" crossorigin="anonymous"></script>
@@ -16,16 +16,16 @@
 <body>
   <header id="home" class="container">
       <nav class="nav row">
-        <div class="nav__logo"><a href="#home"><img src="images/Logos/Logo.svg" alt="Logo"></a></div>
+        <div class="nav__logo"><a href="index.html"><img src="images/Logos/Logo.svg" alt="Logo"></a></div>
         <ul class="nav__list">
-          <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+          <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
           <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
           <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
-          <li type="button" class="nav__item"><a href="#" class="btn nav__btn">Contact</a></li>
+          <li type="button" class="nav__item"><a href="contact.html" class="btn nav__btn">Contact</a></li>
           <div class="hamburger">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
+            <div class="bar bar1"></div>
+            <div class="bar bar2"></div>
+            <div class="bar bar3"></div>
           </div>
         </ul>
       </nav>
@@ -138,7 +138,7 @@
         Do you want to talk about a project? 
       </h3>
     
-      <a class="btn contact__btn" href="#" type="button">Get in Touch!</a>
+      <a class="btn contact__btn" href="contact.html" type="button">Get in Touch!</a>
     </div>
     
 <div class="container">
