--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
           <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
           <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
-          <li type="button" class="nav__item"><a href="contact.html" class="btn nav__btn">Contact</a></li>
+          <li type="button" class="nav__item"><a href="contact.html" class="nav__link btn">Contact</a></li>
           <div class="hamburger">
             <div class="bar bar1"></div>
             <div class="bar bar2"></div>
