--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
 
 <body>
   <header id="home" class="container">
+    
       <nav class="nav row">
+        <div class="hamburger">
+          <div class="bar bar1"></div>
+          <div class="bar bar2"></div>
+          <div class="bar bar3"></div>
+        </div>
         <div class="nav__logo"><a href="index.html"><img src="images/Logos/Logo.svg" alt="Logo"></a></div>
         <ul class="nav__list">
           <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
           <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
           <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
-          <li type="button" class="nav__item"><a href="contact.html" class="nav__link btn">Contact</a></li>
-          <div class="hamburger">
-            <div class="bar bar1"></div>
-            <div class="bar bar2"></div>
-            <div class="bar bar3"></div>
-          </div>
+          <li type="button" class="nav__item"><a id="contactBtn" href="contact.html" class="btn nav__btn">Contact</a></li>
+          
         </ul>
       </nav>
 
