--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Daniel Portillo</title>
+  <title>Daniel Portillo | Front-end developer</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/Logos/avataaars 1.svg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -62,7 +62,7 @@
   
         <div class="card card__skill">
           <img src="images/Skills/Front-End.svg" alt="front-end" class="card__img">
-          <h3 class="card__title">Frontend Developer</h3>
+          <h3 class="card__title">Front-end Developer</h3>
           <p class="card__text">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus eos maxime minima quod laborum ipsum,
             perferendis maiores dolor unde. Eaque maiores est doloremque recusandae animi?
@@ -79,7 +79,7 @@
   
         <div class="card card__skill">
           <img src="images/Skills/Back-End.png" alt="back-end" class="card__img">
-          <h3 class="card__title">Backend Apprentice</h3>
+          <h3 class="card__title">Back-end Apprentice</h3>
           <p class="card__text">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus eos maxime minima quod laborum ipsum,
             perferendis maiores dolor unde. Eaque maiores est doloremque recusandae animi?
