--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="nav__logo"><a href="index.html"><img src="images/Logos/Logo.svg" alt="Logo"></a></div>
         <ul class="nav__list">
           <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-          <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
+          <li class="nav__item"><a href="index.html#skills" class="nav__link">Skills</a></li>
+          <li class="nav__item"><a href="index.html#projects" class="nav__link">Projects</a></li>
           <li type="button" class="nav__item"><a id="contactBtn" href="contact.html" class="btn nav__btn">Contact</a></li>
           
         </ul>
@@ -161,16 +161,19 @@
   
     <div class="footer__social">
 
+      <a class="footer__social__link" href="https://github.com/dportillo23"><i class="fab fa-github"></i></a>
    <a class="footer__social__link" href="https://www.linkedin.com/in/daniel-portillo23"><i class="fab fa-linkedin-in"></i></a>
    <a class="footer__social__link" href="https://twitter.com/DanielEPortillo"><i class="fab fa-twitter"></i></a>
-   <a class="footer__social__link" href="https://twitter.com/DanielEPortillo"><i class="fab fa-instagram"></i></a>
+   <a class="footer__social__link" href="https://www.instagram.com/devportillo/"><i class="fab fa-instagram"></i></a>
+   
+
   
     </div>
   
   
   </div>
   <div class="footer__end">
-    <p class="copyright">© 2021. Made and powered by me</p>
+    <p class="copyright">© <span class="year">2021</span>. Made and powered by me</p>
     <img src="images/Logos/Logo_black&white.svg" alt="" class="footler__logo">
   </div>
 </div>
