Changes on Contact page, adjusting responsiveness

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel Portillo | Front-end developer</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/Logos/avataaars 1.svg">
@@ -133,7 +134,7 @@
 
   </section>
 
-  <footer class="footer">
+  <footer class="footer padding--top">
 
     <div class="card contact_me">
       <h3 class="contact__text">
@@ -174,7 +175,7 @@
   </div>
   <div class="footer__end">
     <p class="copyright">© <span class="year">2021</span>. Made and powered by me</p>
-    <img src="images/Logos/Logo_black&white.svg" alt="" class="footler__logo">
+    <img src="images/Logos/Logo_black&white.svg" alt="" class="footer__logo">
   </div>
 </div>
   </footer>
