--- a/contact.html
+++ b/contact.html
@@ -7,26 +7,27 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/Logos/avataaars 1.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
+  <title>Daniel Portillo | Contact me</title>
   <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Satisfy&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/22e099610c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
-  <header class="container">
+  <header id="contact" class="container">
     <nav class="nav row">
+      <div class="hamburger">
+        <div class="bar bar1"></div>
+        <div class="bar bar2"></div>
+        <div class="bar bar3"></div>
+      </div>
       <div class="nav__logo"><a href="index.html"><img src="images/Logos/Logo.svg" alt="Logo"></a></div>
       <ul class="nav__list">
         <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
         <li class="nav__item"><a href="index.html#skills" class="nav__link">Skills</a></li>
         <li class="nav__item"><a href="index.html#projects" class="nav__link">Projects</a></li>
-        <li type="button" class="nav__item"><a href="contact.html" class="btn nav__btn">Contact</a></li>
-        <div class="hamburger">
-          <div class="bar bar1"></div>
-          <div class="bar bar2"></div>
-          <div class="bar bar3"></div>
-        </div>
+        <li type="button" class="nav__item"><a id="contactBtn" href="contact.html" class="btn nav__btn">Contact</a></li>
+
       </ul>
     </nav>
 
@@ -64,9 +65,9 @@
                 </label>
               </div>
 
-            
-            <div class="form__item form__btn"><input type="submit" value="Send!" class="btn contact__button"></div>
-          </div>
+
+              <div class="form__item form__btn"><input type="submit" value="Send!" class="btn contact__button"></div>
+            </div>
         </div>
         </form>
       </div>
@@ -78,31 +79,19 @@
   <footer class="footer">
 
     <div class="container">
-      <div class="row">
-        <div class="footer__me">
-          <div class="footer__pics">
-            <img src="images/Logos/NEW_PIC.png" alt="" class="profile__pic">
-            <div class="vs__code_div"><img src="images/VS_Code.png" alt="vs-code-logo"></div>
-            <p>I ❤️ VS Code</p>
-          </div>
-
-          <div class="footer__greetings">
-            <h1>Hello!</h1>
-            <p>I’m a civil engineer, with a master in Structural, Foundation and Materials Engineering who now discover
-              a love for programming.</p>
-            <p>I started with web development where I spent lot of hours having fun and learning new interesting things.
-              I’m also a Python enthusiast, I love that is really powerful but at the same time very clean and readable.
-            </p>
-          </div>
-        </div>
-
+      <div class="row center margin--bottom">
+        
         <div class="footer__social">
+
           <a class="footer__social__link" href="https://github.com/dportillo23"><i class="fab fa-github"></i></a>
           <a class="footer__social__link" href="https://www.linkedin.com/in/daniel-portillo23"><i
               class="fab fa-linkedin-in"></i></a>
           <a class="footer__social__link" href="https://twitter.com/DanielEPortillo"><i class="fab fa-twitter"></i></a>
           <a class="footer__social__link" href="https://www.instagram.com/devportillo/"><i
               class="fab fa-instagram"></i></a>
+
+
+
         </div>
 
 
