Final touches for css animations on contact form

--- a/contact.html
+++ b/contact.html
@@ -50,18 +50,18 @@
           <form action="" method="post">
             <div class="form__box">
               <div class="form__item single">
-                <input type="text" id="name" class="contact__input" name="contactName">
+                <input type="text" id="name" class="contact__input" name="contactName" placeholder=" ">
                 <label for="name" class="contact__label"><span class="contact__span">Name</span></label>
               </div>
 
-              <div class="form__item single"><input type="text" id="email" class="contact__input" name="contactEmail">
+              <div class="form__item single"><input type="text" id="email" class="contact__input" name="contactEmail" placeholder=" ">
                 <label for="email" class="contact__label"><span class="contact__span">Email</span></label>
               </div>
 
               <div class="form__item double">
-                <textarea class="contact__input contact__textarea" id="message" name="contactMessage"></textarea>
+                <textarea class="contact__input contact__textarea" id="message" name="contactMessage" placeholder=" "></textarea>
                 <label for="message" class="contact__label">
-                  <span class="contact__span">Message</span>
+                  <Message class="contact__span">Message</span>
                 </label>
               </div>
 
