Under development message

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <h1 class="hero__me">I'm Daniel.</h1>
           </div>
         </div>
-        <h2 class="hero__dedication">a civil engineer and programmer.</h2>
+        <h2 class="hero__dedication"><span class="message_development">SITE UNDER DEVELOPMENT</span><br>
+          a civil engineer and programmer.</h2>
         <img class="hero__image" src="images/Bridge.svg" alt="bridge-img">
 
 
